# payment-settle-accounts

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
data/: transactions.csv
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  (+2 more)
doc/payment_settle_accounts/: all.html  enum.TransactionError.html  enum.TransactionType.html  index.html  sidebar-items.js  struct.Account.html  struct.CSVTransactionReader.html  struct.CSVTransactionResultStdoutWriter.html  struct.CentDenomination.html  struct.MemoryThreadSafePaymentEngine.html  struct.Transaction.html  struct.TransactionResult.html  struct.TransactionResultSummary.html  trait.PaymentEngine.html  trait.Sink.html  trait.Source.html  type.ClientId.html  type.TxId.html
doc/payment_settle_accounts/engine/: trait.PaymentEngine.html
doc/payment_settle_accounts/io/: trait.Sink.html  trait.Source.html
doc/payment_settle_accounts/program/: index.html  sidebar-items.js  struct.TransactionPipeline.html  struct.TransactionPipelineBuilder.html  trait.Pipeline.html
doc/src/payment_settle_accounts/: lib.rs.html
src/: lib.rs  main.rs
src/domain/: entities.rs  errors.rs  mod.rs
src/engine/: memory.rs  mod.rs  transaction.rs
src/io/: csv.rs  mod.rs
src/program/: mod.rs
tests/: engine_prop_test.rs  integration_test.rs
tests/data/: tx_test_ok.csv  tx_test_with_charge_back.csv  tx_tests.csv  tx_tests_bad_amount.csv  tx_tests_error.csv  tx_tests_wrong_formatted.csv
(+45 files in other folders)
